# cadss_public

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ex_branch.config  ex_coher.config  ex_proc.config  ex_rrip.config  ex_victim.config  submission  test.config
branch/: CMakeLists.txt  branch.c
branchCPP/: CMakeLists.txt  br.cpp  br.h  branch.c
cache/: CMakeLists.txt  cache.c
coherence/: CMakeLists.txt  coher_internal.h  coherence.c  protocol.c  stree.h
common/: branch.h  cache.h  coherence.h  common.h  interconnect.h  memory.h  processor.h  trace.h
engine/: CMakeLists.txt  config.c  config.h  debug.c  engine.c  engine.h
interconnect/: CMakeLists.txt  interconn.cpp  interconnect.c  interconnect.cpp  interconnect_internal.h  stree.c  stree_cpp.c  stree_cpp.h
memory/: CMakeLists.txt  memory.c  memory_internal.h
processor/: CMakeLists.txt  processor.c
simpleCache/: CMakeLists.txt  cache.c  stree.c
trace/: CMakeLists.txt  trace.c  trace_internal.h
trace/taskLib/: .gitignore  CMakeLists.txt  Task.cpp  TaskGraphAPI.cpp  TaskGraphAPI.h
traces/: example.trace  ls-proc.trace
traces/branch/: test.trace
traces/coher/simple/: p0.trace  p1.trace  p2.trace  p3.trace
traces/wireroute/final/: p0.trace  p1.trace  p2.trace  p3.trace
traces/wireroute/outputs/: output-coherence-simpleCache.txt  output-refCoherence-refCache.txt  output-refCoherence-simpleCache.txt
traces/wireroute/work/: overall_zsim_trace.txt  p0.trace  p0_LS.trace  p0_final.trace  p1.trace  p1_LS.trace  p1_final.trace  p2.trace  p2_LS.trace  p2_final.trace  p3.trace  p3_LS.trace  (+1 more)
